Fixed AI bug